Revert "Fixed word wrap on primary buttons"
This reverts commit e1c33c2b941ea1695b46a97e94e3ec57bfa499f0.

--- a/css/jho.css
+++ b/css/jho.css
@@ -187,7 +187,6 @@ span.strong {
 	background: #FFFFFF;
 	color: #5FBFC2;
 	border: 1px solid #5FBFC2;
-	white-space: nowrap;
 }
 
 .jh-button-secondary {
